# django_audit_model

./: .gitignore  README.md  setup.cfg
src/django_audit_model/: __init__.py  audit_model.py  audit_model_admin.py
src/sample/: product.py  product_admin.py
