[metadata]
# replace with your username:
name = django_audit_model_ksaripan
version = 0.0.2
author = Kiatkachorn Saripan
author_email = author@example.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ksaripan/django_audit_model
project_urls =
    Bug Tracker = https://github.com/ksaripan/django_audit_model/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
